# Agentic-File-Manager

./: .gitignore
DAEMON/Bulk indexer/: Cargo.toml  bulk_indexer.rs  main.rs  mod.rs
DAEMON/Bulk indexer/mnt/user-data/outputs/sentinel-daemon/src/graph/: mod.rs
DAEMON/OS-DAEMON/: Cargo.toml  README.md  sentinel-daemon.service  sentinel-daemon.toml
DAEMON/OS-DAEMON/mnt/user-data/outputs/sentinel-daemon/src/extractor/: mod.rs
DAEMON/OS-DAEMON/mnt/user-data/outputs/sentinel-daemon/src/governor/: mod.rs
DAEMON/OS-DAEMON/mnt/user-data/outputs/sentinel-daemon/src/ipc/: mod.rs
DAEMON/OS-DAEMON/src/: extractor.rs  governor.rs  graph.rs  ipc.rs  main.rs
DAEMON/OS-DAEMON/src/daemon/: embedder.rs  fanotify.rs  mod.rs
DAEMON/extractor/: Cargo.toml  mod.rs
DAEMON/sentinel_daemon/: Cargo.toml  migrate_kuzu.py
DAEMON/sentinel_daemon/.cargo/: config.toml
DAEMON/sentinel_daemon/src/: daemon.rs  governor.rs  graph.rs  ipc.rs  main.rs  tantivy_index.rs
Installer and system config/: install.sh  smoke_test.py  test_installer.py
QUERY/LLM/: config.py  download_model.py  grammar.py  ipc_client.py  requirements.txt  sentinel-query.service  server.py  test_translator.py  time_parser.py  translator.py
QUERY/Orchestrator/: config.py  orchestrator.py  orchestrator_server.py  result.py  sentinel-orchestrator.service  test_orchestrator.py
UI/interface/: electron-main.js  electron-preload.js  index.html  package.json  sentinel-ipc-client.js  test_ui.test.js
embedding/: README.md  config.py  download_model.py  engine.py  model.py  pyproject.toml  sentinel-embedding.service  sentinel-vectorstore.service  test_pipeline.py  vector_store.py  vector_store_client.py
