[package]
name    = "sentinel-daemon"
version = "0.1.0"
edition = "2021"
authors = ["SentinelAI"]
description = "Core OS event daemon for SentinelAI — fanotify-based file system monitor"

[[bin]]
name = "sentinel-daemon"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio          = { version = "1",  features = ["full"] }

# fanotify / Linux kernel bindings
nix            = { version = "0.29", features = ["fanotify", "process", "signal", "fs", "poll"] }
libc           = "0.2"

# Graph database (embedded Kùzu via FFI — user must install libkuzu)
# We abstract behind our own trait so the backend is swappable
# kuzu          = { version = "0.3" }   # uncomment when kuzu-rs is stable

# IPC between daemon and the embedding / LLM engines
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio-stream   = "0.1"

# Unix domain socket IPC (provided by tokio with "full" feature)

# Logging
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter", "json"] }

# Config file (TOML)
config         = "0.14"
serde_derive   = "1"

# Error handling
anyhow         = "1"
thiserror      = "1"

# Metrics / resource governor
sysinfo        = "0.30"

# BM25 lexical index (tantivy)
tantivy        = "0.22"

# Cross-platform path helpers
walkdir        = "2"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["test-util"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = "symbols"
