[package]
name = "sentinel-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sentinel-daemon"
path = "src/main.rs"

[dependencies]
# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = [
    "rt-multi-thread", "macros", "sync", "time", "fs", "signal"
] }
tokio-util = { version = "0.7", features = ["rt"] }

# ── Filesystem monitoring ─────────────────────────────────────────────────────
nix = { version = "0.27", features = ["fs", "event", "poll"] }

# ── Filesystem walking (bulk indexer) ────────────────────────────────────────
walkdir = "2"

# ── Graph / lexical index ─────────────────────────────────────────────────────
# Tantivy: BM25 full-text search (Tier-3 fallback)
tantivy = "0.21"

# kuzu-rs: uncomment when kuzu-rs FFI is stable (Phase 8)
# kuzu = "0.1"

# ── System information (governor) ────────────────────────────────────────────
sysinfo = "0.30"

# ── Serialisation ─────────────────────────────────────────────────────────────
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Error handling ────────────────────────────────────────────────────────────
anyhow = "1"

# ── Content extraction ────────────────────────────────────────────────────────
# DOCX: pure-Rust Word document parser (paragraph walking, table cells)
docx-rs  = "0.4"

# XLSX / XLS / ODS: pure-Rust spreadsheet reader (all sheets, all cells)
# "dates" feature enables ISO-8601 date cell formatting
calamine = { version = "0.24", features = ["dates"] }

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt", "macros", "time"] }
