[package]
name = "sentinel_daemon"
version = "0.1.0"
edition = "2021"


# ── Feature flags ─────────────────────────────────────────────────────────────
#
# kuzu  — activate the production Kùzu graph store.
#         Requires the Kùzu shared library (libkuzu) to be installed.
#         Without this flag the daemon compiles and runs with MockGraphStore.
#
#   Build:  cargo build --release --features kuzu
#   Test:   cargo test --features kuzu
#
[features]
kuzu = ["dep:kuzu"]

[dependencies]
# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = [
    "rt-multi-thread", "macros", "sync", "time", "fs", "signal"
] }
tokio-util = { version = "0.7", features = ["full"] }

# ── Filesystem monitoring ─────────────────────────────────────────────────────
nix = { version = "0.27", features = ["fs", "event", "poll"] }

# ── Filesystem walking (bulk indexer) ────────────────────────────────────────
walkdir = "2"

# ── Graph database ────────────────────────────────────────────────────────────
# Kùzu: embedded property graph database with Cypher query language.
# Only linked when the "kuzu" feature is enabled.
# When disabled, MockGraphStore (NDJSON log) is used automatically.
kuzu = { version = "0.6", optional = true }

# ── Lexical index (BM25, Tier-3 fallback) ────────────────────────────────────
tantivy = "0.21"

# ── System information (governor) ────────────────────────────────────────────
sysinfo = "0.30"

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Error handling ────────────────────────────────────────────────────────────
anyhow = "1"

# ── Content extraction ────────────────────────────────────────────────────────
docx-rs  = "0.4"
calamine = { version = "0.24", features = ["dates"] }

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt", "macros", "time"] }
